# EduOS

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07145178d210_add_schedule_fields_to_subject.py  1082b276e0ad_init_local_vector_models.py  109abc5a5b8d_switch_to_local_vectors.py  4613a0faef92_final_sync.py  5b68617d6c33_initial_migration_with_gemini_768.py  7ac9ca69880b_add_summary_to_academic_files.py  bc071085cd20_move_task_to_academic_and_create_table.py  e90c541ce9c1_add_summary_to_academicfile.py  fa5646aae542_initial_migration.py  fe892835b6a2_add_semesters_and_subjects.py
backend/app/: main.py
backend/app/api/v1/endpoints/: academic.py  files.py  flashcards.py  search.py
backend/app/core/: database.py
backend/app/models/: __init__.py  academic.py  ai.py
backend/app/services/: ai_processor.py  spaced_repetition.py  vector_search.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/ask/: page.tsx
frontend/app/quiz/[fileId]/: page.tsx
frontend/app/study/: page.tsx
frontend/app/subject/[id]/: page.tsx
frontend/app/upload/: page.tsx
