[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Kot",email = "mackot1337@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pypdf (>=6.13.3,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "google-genai (>=2.9.0,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "icalendar (>=7.2.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
